array.island.Island.scala.error
Erreur de compilation :
Island:3: error: not found: type int
  var nbNiveaux:int=0
                ^Island:4: error: type mismatch;
 found   : Unit
 required: Int
  for(i<-1 to (num.length)-1){
       ^