array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nbNiveaux:int=0
  for(i<-1 to (num.length)-1){
    if(num(i)<num(i+1)){
      nbNiveaux+=1
    }
  }
}